# embedanythingindart

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TROUBLESHOOTING.md  analysis_options.yaml  dart_test.yaml  example_document.txt  pubspec.yaml
@agent-os/: roadmap.md
agent-os/: 11-07-2025-docs.md
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2025-11-03-phase-1-core-text-embedding-foundation/: spec.md  tasks.md
benchmark/: benchmark.dart  quick_benchmark.dart  results.md
coverage/: lcov.info
coverage/test/: edge_cases_test.dart.vm.json  embedanythingindart_test.dart.vm.json  error_test.dart.vm.json  factory_methods_test.dart.vm.json  memory_test.dart.vm.json  model_config_test.dart.vm.json  platform_test.dart.vm.json
doc/: advanced-topics.md  api-reference.md  core-concepts.md  error-handling.md  getting-started.md  models-and-configuration.md  usage-guide.md
doc/api/: __404error.html  index.html  index.json  search.html
doc/api/embedanythingindart/: EmbedAnything-class-sidebar.html  EmbedAnything-class.html  EmbedAnythingError-class-sidebar.html  EmbedAnythingError-class.html  EmbeddingFailedError-class-sidebar.html  EmbeddingFailedError-class.html  EmbeddingModel-enum-sidebar.html  EmbeddingModel.html  EmbeddingResult-class-sidebar.html  EmbeddingResult-class.html  FFIError-class-sidebar.html  FFIError-class.html  InvalidConfigError-class-sidebar.html  InvalidConfigError-class.html  ModelConfig-class-sidebar.html  (+10 more)
docs/: readme.md
docs/guides/: best-practices.md
example/: embedanythingindart_example.dart  memory_stress_example.dart  results.txt
example_docs/: doc1.txt  doc2.md  doc3.txt  readme.md
hook/: build.dart
lib/: embedanythingindart.dart
lib/src/: chunk_embedding.dart  embedder.dart  embedding_result.dart  errors.dart  model_config.dart  models.dart
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: async_embed.rs  device.rs  lib.rs
specs/2025-11-03-phase-3-dart-api-file-directory-embedding/: spec.md  tasks.md
test/: async_embedding_test.dart  dart_api_test.dart  edge_cases_test.dart  embedanythingindart_test.dart  error_test.dart  factory_methods_test.dart  ffi_bindings_test.dart  memory_stress_test.dart  memory_test.dart  model_config_test.dart  phase3_integration_test.dart  platform_test.dart
test/fixtures/: README.md  sample.md  sample.txt
(+90 files in other folders)
