[package]
name = "embedanything_dart"
version = "0.0.1"
edition = "2021"

[lib]
# Both crate types required for native_toolchain_rs
# staticlib: For iOS (static linking only)
# cdylib: For all other platforms (dynamic linking)
crate-type = ["staticlib", "cdylib"]

[dependencies]
# EmbedAnything core library from GitHub
embed_anything = { git = "https://github.com/StarlightSearch/EmbedAnything.git", package = "embed_anything", default-features = false }

# Async runtime (required by embed_anything)
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "sync", "macros"] }

# Error handling
anyhow = "1.0"

# FFI support
libc = "0.2"

# Once initialization for runtime
once_cell = "1.19"

# JSON serialization for metadata
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
