[package]
name = "embedanything_dart"
version = "0.0.1"
edition = "2021"

[lib]
# Both crate types required for native_toolchain_rs
# staticlib: For iOS (static linking only)
# cdylib: For all other platforms (dynamic linking)
crate-type = ["staticlib", "cdylib"]

[features]
default = []
# GPU acceleration features
metal = ["embed_anything/metal", "candle-core/metal"]
cuda = ["embed_anything/cuda", "candle-core/cuda"]
# CPU optimization features
accelerate = ["embed_anything/accelerate", "candle-core/accelerate"]
mkl = ["embed_anything/mkl", "candle-core/mkl"]

[dependencies]
# EmbedAnything core library from GitHub
embed_anything = { git = "https://github.com/StarlightSearch/EmbedAnything.git", package = "embed_anything", default-features = false }

# Candle core for device detection (version must match embed_anything's dependency)
candle-core = "0.9.1"

# Async runtime (required by embed_anything)
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "sync", "macros"] }

# Error handling
anyhow = "1.0"

# FFI support
libc = "0.2"

# Once initialization for runtime
once_cell = "1.19"

# JSON serialization for metadata
serde_json = "1.0"

# Async utilities (CancellationToken for async operations)
tokio-util = "0.7"

# Static lazy initialization for async registry
lazy_static = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
